--- a/README.org
+++ b/README.org
@@ -24,12 +24,15 @@ You can clone a heading as many times as you want. If there are multiple clones,
 
 
 Quick notes:
-1. Only the headline (including todo and tags) and the body (i.e., the properties, planning line, and initial drawers) are cloned. This was an arbitrary decision.
-2. Child nodes are not part of the clone. The clone can be moved within the outline to different locations. 
-3. There are (fixable) problems with the precise location of the read-only text properties and the clone face overlay. For now, it gets the idea across so it serves its purpose. 
-4. While there are questionable design and coding decisions, I think the fundamental design idea is sound, i.e., not relying on modification hooks and having a clone editing mode to abort or commit changes. 
-5. I think this design would work across files, but have not tested.
-6. If this is a good design, there are a lot of questions about how to best accomplish it. Org-ml looks like it might be a useful tool. See https://github.com/ndwarshuis/org-ml. 
+* Only the headline (including todo and tags) and the body (i.e., the properties, planning line, and initial drawers) are cloned. This was an arbitrary decision.
+* Child nodes are not part of the clone. The clone can be moved within the outline to different locations.
+* There are (fixable) problems with the precise location of the read-only text properties and the clone face overlay. For now, it gets the idea across so it serves its purpose.
+* While there are questionable design and coding decisions, I think the fundamental design idea is sound, i.e., not relying on modification hooks and having a clone editing mode to abort or commit changes.
+* I think this design would work across files, but have not tested. 
+** Update: it works, and creating clones across files also works with setting a marker before creating the clone. 
+* If this is a good design, there are a lot of questions about how to best accomplish it. Org-ml looks like it might be a useful tool. See https://github.com/ndwarshuis/org-ml. Right now, using org-ml for headlines and org-element for the body. 
+* Overlays vs. text properties: orgmode will not allow a 'keymap text property. Therefore, overlays have to be used.
+** Unless there is a better way to "lock" the clone. The other choice would be to use the 'point-entered and point-left, which is the next idea to explore.
 
 
 Ideas or feedback, yea or nay, are welcome. 
