--- a/README.org
+++ b/README.org
@@ -43,14 +43,20 @@ Install these dependencies.
 * Usage
 * Task list
 - [ ] Write functions to jump to next clone
-- [ ] Clean up overlay and text properties
+- [X] Clean up overlay and text properties
 - [ ] When the point enters a sensor field, add a space to be able to add to the end of the field (or figure out another solution)
 - [X] Remove =org-ql=
 - [ ] Remove =org-ml=
-- [ ] Remove =ov=
+- [X] Remove =ov=
 - [ ] Fix putting all clone effects on startup so it is properly recursive 
 - [ ] Fix =org-clones--goto-body-start= to skip closing note logs
 - [ ] Figure out how to handle having multiple buffers open
+- [X] Get rid of goto-headline-start... and similar functions (only need get- functions) [abandoned]
+- [ ] Fix org-clones--remove-text-properties to remove only the text props at issue
+- [ ] When removing cursor-sensor text properties, only remove our function from the list and preserve any other functions
+- [X] Fix removing overlays 
+
+
 
 
 * Other transclusion efforts
