--- a/README.org
+++ b/README.org
@@ -46,7 +46,7 @@ Install these dependencies.
 - [X] Clean up overlay and text properties
 - [X] When the point enters a sensor field, add a space to be able to add to the end of the field [solution was a disaster]
 - [X] Remove =org-ql=
-- [ ] Remove =org-ml=
+- [X] Remove =org-ml=
 - [X] Remove =ov=
 - [X] Fix putting all clone effects on startup so it is properly recursive [no recursion; done though enabling mode]
 - [ ] Fix =org-clones--goto-body-start= to skip closing note logs [also harder than I thought]
