--- a/README.org
+++ b/README.org
@@ -4,6 +4,8 @@ This is in progress so keep your creeper eyes away from it.
 
 A lot has changed. Do not look at this read me. 
 
+I have been through hell and back trying to figure out the best way to do this and the fact is there is no simple and/or elegant solution.
+
 * Ideas for orgmode clones
 
 I want to be able to clone an orgmode heading so that it can appear in different places in an outline. When I edit one of these headings, I want the changes to sync to all the other clones. It is a feature of Leo Editor, /see/ https://leoeditor.com/tutorial-pim.html, which I wish I could use but it’s not in Emacs so it is dead to me.
